# anime_data

./: .gitignore  README.md  docker-compose.yml  et --hard 07cfb04  pyproject.toml  recup_code.py
.github/workflows/: ci.yml
airflow/dags/: 00_hello_anidata.py  dag_03_scraper_mock_site.py  dag_anidata_pipeline.py  dag_ingest_external_to_pipeline.py
airflow/scripts/: 00_format_to_csv.py  01_exploration.py  02_nettoyage.py  03_normalisation.py  04_validation.py  05_send_to_elasticsearch.py  scrape_mock_site.py
anidata-scraper/anidata-scraper/: requirements-dev.txt
data/converted/: anime_2.csv  anime_3.csv  merged_input.csv
data/input/: LIRE_MOI.txt
data/scraped/: anime_scraped.csv  anime_scraped.json
docs/: README.md  rapport_exploration.md  rapport_nettoyage.md  rapport_normalisation.md  rapport_validation.md
grafana/dashboards/: anidata-insights.json  anidata-overview.json
grafana/provisioning/datasources/: elasticsearch.yml
mock-site/mock-site/generator/: example_scraper.py  generate_site.py
notebooks/: 01_exploration.py  02_nettoyage.py  02_nettoyage_class.txt  03_normalisation.py  04_validation.py  05_send_to_elasticsearch.py  indexation.py
