[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anidata-scraper"
version = "1.0.0"
description = "Scraper du mock-site AniData Lab"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.scripts]
anidata-scrape = "anidata_scraper.scraper:main"

[tool.setuptools.packages.find]
include = ["anidata_scraper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
# On ajoute mock-site et elk pour être tranquille
exclude = [
    "notebooks",
    "mon_code_valide",
    "anidata-scraper",
    "mock-site",
    "elk",
    "venv",
    ".venv",
    "recup_code.py"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# On ignore les erreurs d'imports (I001) et d'espaces (W291, W293)
ignore = ["E501", "E701", "B007", "W292", "W293", "W291", "F541", "I001", "UP015", "B905"]

[tool.ruff.format]
quote-style = "double"